--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: build_aot
 dependencies:
   build: ^0.12.0
+  build_config: ^0.3.0
   kernel: ^0.3.4+1
 dev_dependencies: 
   build_runner: ^0.10.0
