--- a/packages/build_aot/pubspec.yaml
+++ b/packages/build_aot/pubspec.yaml
@@ -1,8 +1,9 @@
 name: build_aot
+environment:
+  sdk: ">=2.0.0-dev <3.0.0"
 dependencies:
   build: ^0.12.0
   build_config: ^0.3.0
   kernel: ^0.3.4+1
 dev_dependencies: 
   build_runner: ^0.10.0
-  build_vm_compilers: ^0.1.1
