--- a/packages/build_aot/pubspec.yaml
+++ b/packages/build_aot/pubspec.yaml
@@ -4,6 +4,8 @@ environment:
 dependencies:
   build: ^0.12.0
   build_config: ^0.3.0
+  c_builder: ^1.0.0
+  code_buffer: ^1.0.0
   kernel: ^0.3.4+1
 dev_dependencies: 
   build_runner: ^0.10.0
