Spits out version information on failure

--- a/packages/build_aot/build.yaml
+++ b/packages/build_aot/build.yaml
@@ -4,7 +4,8 @@ builders:
     builder_factories:
       - dillToCBuilder
     build_extensions:
-      .dart:
+      .dill:
         - .c
-    auto_apply: root
-    build_to: source
+    auto_apply: root_package
+    applies_builders:
+      - build_vm_compilers|entrypoint
