--- a/packages/build_aot/pubspec.yaml
+++ b/packages/build_aot/pubspec.yaml
@@ -4,6 +4,7 @@ environment:
 dependencies:
   build: ^0.12.0
   build_config: ^0.3.0
+  build_vm_compilers: ^0.1.1
   c_builder: ^1.0.0
   code_buffer: ^1.0.0
   kernel: ^0.3.4+1
