--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,5 +3,5 @@ publish_to: none
 dependencies:
 dev_dependencies:
   build_aot:
-    path: ../packages/build_aot
-  build_runner: ^0.10.0
+    path: ../build_aot
+  build_runner: ^1.0.0
