--- a/build_aot/pubspec.yaml
+++ b/build_aot/pubspec.yaml
@@ -1,14 +1,11 @@
 name: build_aot
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.0.0 <3.0.0"
 dependencies:
   build: ^1.0.0
   build_config: ^0.3.0
-  c_builder: ^1.0.0
+  build_vm_compilers: ^0.1.1
   code_buffer: ^1.0.0
-  front_end: 0.1.6
-  kernel: 0.3.6 # ^0.3.4+1
-  package_resolver: ^1.0.0
   scratch_space: ^0.0.3
 dev_dependencies: 
   build_runner: ^1.0.0
